--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
   
 
-
+<link rel="next" href="primo---adaptive-discovery.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -71,7 +71,10 @@
 <li><a href="./">A Minimal Book Example</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="#create-your-open-textbook"><i class="fa fa-check"></i><b>1</b> Create your open textbook</a></li>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Create your open textbook</a></li>
+<li class="chapter" data-level="2" data-path="primo---adaptive-discovery.html"><a href="primo---adaptive-discovery.html"><i class="fa fa-check"></i><b>2</b> Primo - Adaptive Discovery</a><ul>
+<li class="chapter" data-level="2.1" data-path="primo---adaptive-discovery.html"><a href="primo---adaptive-discovery.html#documentation-of-features-customization"><i class="fa fa-check"></i><b>2.1</b> <em>Documentation of Features &amp; Customization</em></a></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -97,11 +100,8 @@
 <p class="author"><em>Angela Walker</em></p>
 </div>
 <div id="create-your-open-textbook" class="section level1 hasAnchor">
-<h1><span class="header-section-number">1</span> Create your open textbook<a href="#create-your-open-textbook" class="anchor-section" aria-label="Anchor link to header"></a></h1>
+<h1><span class="header-section-number">1</span> Create your open textbook<a href="index.html#create-your-open-textbook" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>Hello!</p>
-
-<p>#Introduction</p>
-<p>If I remember Markdown right, two line spacings make a new paragraph.</p>
 
 </div>
             </section>
@@ -110,7 +110,7 @@
         </div>
       </div>
 
-
+<a href="primo---adaptive-discovery.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
