--- a/primo---adaptive-discovery.html
+++ b/primo---adaptive-discovery.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="index.html"/>
-
+<link rel="next" href="search-filter-facets.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -75,6 +75,15 @@
 <li class="chapter" data-level="2" data-path="primo---adaptive-discovery.html"><a href="primo---adaptive-discovery.html"><i class="fa fa-check"></i><b>2</b> Primo - Adaptive Discovery</a><ul>
 <li class="chapter" data-level="2.1" data-path="primo---adaptive-discovery.html"><a href="primo---adaptive-discovery.html#documentation-of-features-customization"><i class="fa fa-check"></i><b>2.1</b> <em>Documentation of Features &amp; Customization</em></a></li>
 </ul></li>
+<li class="chapter" data-level="3" data-path="search-filter-facets.html"><a href="search-filter-facets.html"><i class="fa fa-check"></i><b>3</b> Search Filter Facets</a><ul>
+<li class="chapter" data-level="3.1" data-path="search-filter-facets.html"><a href="search-filter-facets.html#change-facet-heading-tweak-my-results"><i class="fa fa-check"></i><b>3.1</b> Change Facet Heading “Tweak my results”</a></li>
+<li class="chapter" data-level="3.2" data-path="search-filter-facets.html"><a href="search-filter-facets.html#change-which-facet-categorie-show"><i class="fa fa-check"></i><b>3.2</b> Change Which Facet Categorie Show</a></li>
+<li class="chapter" data-level="3.3" data-path="search-filter-facets.html"><a href="search-filter-facets.html#change-label-of-facet-category"><i class="fa fa-check"></i><b>3.3</b> Change Label of Facet Category</a></li>
+<li class="chapter" data-level="3.4" data-path="search-filter-facets.html"><a href="search-filter-facets.html#change-individual-facet-labels"><i class="fa fa-check"></i><b>3.4</b> Change Individual Facet Labels</a></li>
+<li class="chapter" data-level="3.5" data-path="search-filter-facets.html"><a href="search-filter-facets.html#course-reserves"><i class="fa fa-check"></i><b>3.5</b> Course Reserves</a></li>
+<li class="chapter" data-level="3.6" data-path="search-filter-facets.html"><a href="search-filter-facets.html#collection-discovery"><i class="fa fa-check"></i><b>3.6</b> Collection Discovery</a></li>
+<li class="chapter" data-level="3.7" data-path="search-filter-facets.html"><a href="search-filter-facets.html#resource-recommender"><i class="fa fa-check"></i><b>3.7</b> Resource Recommender</a></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -114,8 +123,8 @@ The following is a documentation of the customizations made by our colleagues ac
           </div>
         </div>
       </div>
-<a href="index.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="search-filter-facets.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
